# Bloodroot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Assets/Shaders/: shader.slang
Tools/: Compile.bat
src/: AppData.h  BloodrootApp.cpp  BloodrootApp.h  CMakeLists.txt  Main.cpp
src/Core/: CMakeLists.txt
src/Core/FileIO/: CMakeLists.txt  FileIO.cpp  FileIO.h
src/Core/Image/: Image.cpp  Image.h
src/Core/Interfaces/: IRenderer.h
src/Core/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/Core/Vulkan/Geometry/: Cube.h  Square.h  Vertex.h
src/Core/Window/: GLFWInstance.cpp  GLFWInstance.h  Window.cpp  Window.h
src/Game/: CMakeLists.txt
src/Game/Camera/: Camera.cpp  Camera.h
